tests/errors/cmplx_01.f90
program cmplx_01
    complex :: a
    a = cmplx(y=2)
    print *, a
end program
